--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.16",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,11 +20,14 @@
     "react-icons-kit": "^2.0.0",
     "react-lottie": "^1.2.3",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.1",
     "react-tooltip": "^5.2.0",
+    "redux": "^4.2.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
